--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.my_note">
-   <application
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+
+
+    <application
         android:label="my_note"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
