--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   get_storage: ^2.0.3
   lottie: ^1.3.0
   auto_size_text: ^3.0.0
+  pin_code_fields: ^7.4.0
+
+
 
 dev_dependencies:
   flutter_test:
