--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   auto_size_text: ^3.0.0
   pin_code_fields: ^7.4.0
   shamsi_date: ^1.0.1
+  protobuf: ^2.0.1
+  grpc: ^3.0.2
+  sqflite: ^2.0.2+1
+  path_provider: ^2.0.9
 
 
 
